# Toeplitz-covariance-estimation

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  make_matlab  pyproject.toml
.github/workflows/: build-and-publish.yml  cmake.yml  formatting.yml  release.yml  sanitizer.yml  valgrind.yml
C/include/: Timer.h  linalg.h
C/nml/: NML_solver.h
C/src/: Newton.c  diff.c
C/tests/: CMakeLists.txt  test_nml.c
NML/: CMakeLists.txt  NML_mex.c
NML/include/: NML_solve.h  NML_work.h  Newton.h  diff.h  levinson_durbin.h  linalg.h  test  utils.h
NML/src/: NML_solve.c  Newton.c  diff.c  levinson_durbin.c  linalg.c  utils.c
c/include/: NML_solver_internal.h  Newton.h  diff.h  linalg.h  utils.h
c/include/nml/: NML_solve.h  NML_work.h  Newton.h  diff.h  levinson_durbin.h  linalg.h  utils.h
c/include/nml/platform/: lapacke_compat.h
c/nml/: NML_solver.h  levinson_durbin.h  types.h
c/nml/platform/: blas_lapack.h  lapacke_compat.h
c/src/: NML_solve.c  NML_solver.c  Newton.c  Newton.h  diff.c  diff.h  lapacke_compat.c  levinson_durbin.c  linalg.c  utils.c  utils.h
c/tests/: test_nml.c
examples/matlab/: rmusic_1d.m
examples/python/: demo.py
examples_demo/matlab/: U_CRB.m  cm2doa.m  demo.asv  demo.m  generate_ula_data.m
examples_paper/MSE_true_dist/: MSE_compute_new.m  MSE_run.m  MSE_run_new.m
examples_paper/MSE_true_dist/scaling/: scaling.eps
examples_paper/algorithms/: ATOM2.m
examples_paper/angle_estimation/: MSE_vs_SNR.m  MSE_vs_samples.m  MSE_vs_sensors.m  MSE_vs_separation.asv  MSE_vs_separation.m
examples_paper/utils/: S_CRB.m  generate_samples.m  toeplitz_via_cross_corr.m
matlab/: CMakeLists.txt  NML_mex.c  nml_free_solver_mex.c  nml_new_solver_mex.c  nml_solve_mex.c
matlab/examples/: demo.m
matlab/examples_paper/MSE_true_dist/: CRB_true_dist.m  MSE_compute.m  MSE_compute_new.asv
matlab/examples_paper/MSE_true_dist/scaling/: init_experiment.m  scaling_data.mat  scaling_run1.m  test_mex.m
matlab/examples_paper/algorithms/: AAD.m  AML.m  ATOM.m  create_Psi_AML.m
matlab/examples_paper/angle_estimation/: MSE_vs_sensors.m
matlab/examples_paper/utils/: S_CRB.m  estimates_cov.m  generate_ula_data.m
python/examples/: demo.py  doa_utils.py  simple.py
python/examples_paper/MSE_true_dist/: crb_true_dist.py  mse_compute.py  mse_run.py
python/examples_paper/algorithms/: aad.py  aml.py
python/examples_paper/angle_estimation/: mse_vs_samples.py  mse_vs_sensors.py  mse_vs_separation.py  mse_vs_snr.py
python/examples_paper/utils/: doa_utils.py  estimates_cov.py  toeplitz_utils.py
python/nml/: __init__.py  _bindings.c  solver.py
