[build-system]
requires = ["scikit-build-core >= 0.10", "numpy >= 2.0.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nml-toeplitz"
version = "0.1.1"
description = "Newton Maximum Likelihood estimation of Toeplitz covariance matrices"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["numpy >= 2.0.0"]

[project.urls]
Homepage = "https://github.com/dance858/Toeplitz-covariance-estimation"

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["python/nml"]
